@@ -18,9 +18,6 @@ import io.redspace.ironsspellbooks.api.spells.CastType;
 import io.redspace.ironsspellbooks.api.spells.ISpellContainer;
 import io.redspace.ironsspellbooks.api.util.Utils;
 import io.redspace.ironsspellbooks.entity.spells.target_area.TargetedAreaEntity;
-import io.redspace.ironsspellbooks.item.CastingItem;
-import io.redspace.ironsspellbooks.item.SpellBook;
-import io.redspace.ironsspellbooks.item.weapons.StaffItem;
 import io.redspace.ironsspellbooks.api.item.weapons.MagicSwordItem;
 import io.redspace.ironsspellbooks.spells.TargetAreaCastData;
 import io.redspace.ironsspellbooks.spells.ender.TeleportSpell;
@@ -39,7 +36,7 @@ import org.slf4j.Logger;
 import com.mojang.logging.LogUtils;
 
 /**
- * 铁魔法模组的法术书提供者 - 单例版本
+ * 铁魔法模组的法术书提供者
  * 包含完整的施法逻辑，支持持续性法术和复杂的冷却系统
  * 通过 MaidIronsSpellData 管理各女仆的数据
  * 支持的法术容器类型：
@@ -48,25 +45,15 @@ import com.mojang.logging.LogUtils;
  * - MagicSwordItem: 魔剑（带有法术容器功能的剑）
  * - 其他继承自CastingItem的物品
  */
-public class IronsSpellbooksProvider implements ISpellBookProvider {
+public class IronsSpellbooksProvider extends ISpellBookProvider<MaidIronsSpellData> {
     private static final Logger LOGGER = LogUtils.getLogger();
-    private static final List<String> spellBlacklist = Arrays.asList("irons_spellbooks:spectral_hammer");
+    private static final List<String> spellBlacklist = List.of("irons_spellbooks:spectral_hammer");
 
     /**
-     * 私有构造函数，防止外部实例化
+     * 构造函数，绑定 MaidIronsSpellData 数据类型
      */
     public IronsSpellbooksProvider() {
-        // 私有构造函数
-    }
-
-    /**
-     * 获取指定女仆的法术数据
-     */
-    private MaidIronsSpellData getData(EntityMaid maid) {
-        if (maid == null) {
-            return null;
-        }
-        return MaidIronsSpellData.getOrCreate(maid.getUUID());
+        super(MaidIronsSpellData::getOrCreate);
     }
     
     // === 核心方法（接受EntityMaid参数） ===
@@ -85,96 +72,29 @@ public class IronsSpellbooksProvider implements ISpellBookProvider {
             return false;
         }
         
-        // 检查传统法术书
-        if (itemStack.getItem() instanceof SpellBook) {
-            return true;
-        }
-        
-        // 检查法杖等施法物品
-        if (itemStack.getItem() instanceof CastingItem) {
-            return true;
-        }
-        
-        // 检查魔剑
-        if (itemStack.getItem() instanceof MagicSwordItem) {
-            return true;
-        }
-        
         // 检查是否包含法术容器数据（通用检查）
         return ISpellContainer.isSpellContainer(itemStack);
     }
 
-    /**
-     * 设置目标
-     */
-    @Override
-    public void setTarget(EntityMaid maid, LivingEntity target) {
-        MaidIronsSpellData data = getData(maid);
-        if (data != null) {
-            data.setTarget(target);
-        }
-    }
-
-    /**
-     * 获取目标
-     */
-    @Override
-    public LivingEntity getTarget(EntityMaid maid) {
-        MaidIronsSpellData data = getData(maid);
-        return data != null ? data.getTarget() : null;
-    }
-
-    /**
-     * 设置法术容器（法术书、法杖、魔剑等）
-     */
-    @Override
-    public void setSpellBook(EntityMaid maid, ItemStack spellBook) {
-
-        MaidIronsSpellData data = getData(maid);
-        if (data != null) {
-            // 根据物品类型分别存储到不同的槽位
-            if (spellBook != null && !spellBook.isEmpty()) {
-                if (spellBook.getItem() instanceof SpellBook) {
-                    data.setSpellBook(spellBook);
-                } else if (spellBook.getItem() instanceof MagicSwordItem) {
-                    data.setMagicSword(spellBook);
-                } else if (spellBook.getItem() instanceof StaffItem || spellBook.getItem() instanceof CastingItem) {
-                    data.setStaff(spellBook);
-                } else {
-                    // 其他类型默认存储为法术书
-                    data.setSpellBook(spellBook);
-                }
-            }
-        }
-    }
-
-    
-    /**
-     * 检查是否正在施法
-     */
-    @Override
-    public boolean isCasting(EntityMaid maid) {
-        MaidIronsSpellData data = getData(maid);
-        return data != null && data.isCasting();
-    }
     
     /**
      * 开始施法
      */
     @Override
-    public boolean initiateCasting(EntityMaid maid) {
+    public void initiateCasting(EntityMaid maid) {
         MaidIronsSpellData data = getData(maid);
         if (data == null) {
-            return false;
+            return;
         }
 
-        if (!data.hasAnySpellContainer()) {
-            return false;
+        // 检查是否有可用的法术容器
+        if (data.getSpellBooks().isEmpty()) {
+            return;
         }
 
         // 尝试施放可用的法术
         List<SpellData> availableSpells = new ArrayList<>();
-        data.getAllSpellContainers().forEach(container -> {
+        data.getSpellBooks().forEach(container -> {
             ISpellContainer spellContainer = ISpellContainer.get(container);
             if(!spellContainer.isEmpty()){
                 availableSpells.addAll(Arrays.asList(spellContainer.getAllSpells()));
@@ -199,7 +119,7 @@ public class IronsSpellbooksProvider implements ISpellBookProvider {
         });
 
         if (availableSpells.isEmpty()) {
-            return false;
+            return;
         }
 
         // 随机选择一个可用的法术
@@ -220,20 +140,20 @@ public class IronsSpellbooksProvider implements ISpellBookProvider {
             }
         }
 
-        return initiateCasting(maid, spellData);
+        actualCasting(maid, spellData);
 
     }
     
     /**
      * 开始施法特定法术
      */
-    private boolean initiateCasting(EntityMaid maid, SpellData spellData) {
+    private void actualCasting(EntityMaid maid, SpellData spellData) {
         MaidIronsSpellData data = getData(maid);
         if (spellData == null || spellData.getSpell() == null || maid == null || data == null) {
-            return false;
+            return;
         }
         if (data.isCasting()) {
-            return false; // 如果正在施法，不能开始新的施法
+            return; // 如果正在施法，不能开始新的施法
         }
         
         try {
@@ -243,17 +163,17 @@ public class IronsSpellbooksProvider implements ISpellBookProvider {
             forceLookAtTarget(maid, data);
 
             // 设置目标相关的施法数据（在checkPreCastConditions之前）
-            setupSpellTargetData(maid, spell, spellData.getLevel());
+            setupSpellTargetData(maid, spell);
             
             MagicData magicData = data.getMagicData();
             
             // 检查前置条件
             if (!spell.checkPreCastConditions(maid.level(), spellData.getLevel(), maid, magicData)) {
-                return false;
+                return;
             }
             
             int effectiveCastTime = spell.getEffectiveCastTime(spellData.getLevel(), maid);
-            CastSource castSource = getCastSource(data.getSpellBook());
+            CastSource castSource = getCastSource(data, spellData);
             magicData.initiateCast(spell, spellData.getLevel(), effectiveCastTime, castSource, "offhand");
             
             // 调用施法前处理
@@ -263,13 +183,10 @@ public class IronsSpellbooksProvider implements ISpellBookProvider {
             data.setCurrentCastingSpell(spellData);
             data.setCasting(true);
             maid.swing(maid.getUsedItemHand());
-            
-            return true;
-            
+
         } catch (Exception e) {
             // 重置状态以防出错
             data.resetCastingState();
-            return false;
         }
     }
     
@@ -307,7 +224,7 @@ public class IronsSpellbooksProvider implements ISpellBookProvider {
             if (spell.getCastType() == CastType.CONTINUOUS) {
                 // 每10tick调用一次onCast（与AbstractSpellCastingMob保持一致）
                 if ((remaining + 1) % 10 == 0) {    
-                    CastSource castSource = getCastSource(data.getSpellBook());
+                    CastSource castSource = getCastSource(data, data.getCurrentCastingSpell());
                     spell.onCast(maid.level(), data.getCurrentCastingSpell().getLevel(), maid, castSource, magicData);
                 }
             }
@@ -339,14 +256,7 @@ public class IronsSpellbooksProvider implements ISpellBookProvider {
         // 强制完成施法（当施法被外部中断时）
         forceCompleteCasting(maid);
     }
-    
-    /**
-     * 执行法术
-     */
-    @Override
-    public boolean castSpell(EntityMaid maid) {
-        return initiateCasting(maid);
-    }
+
     
     /**
      * 更新冷却时间
@@ -375,6 +285,33 @@ public class IronsSpellbooksProvider implements ISpellBookProvider {
         }
         
         // 法术书和法杖等其他施法物品使用SPELLBOOK源
+        return CastSource.SPELLBOOK;
+    }
+    
+    /**
+     * 根据当前施放的法术找到对应的容器并确定施法源
+     */
+    private CastSource getCastSource(MaidIronsSpellData data, SpellData currentSpell) {
+        if (data == null || currentSpell == null) {
+            return CastSource.SPELLBOOK;
+        }
+        
+        // 在所有法术容器中查找包含当前法术的容器
+        for (ItemStack container : data.getSpellBooks()) {
+            if (container.isEmpty()) continue;
+            
+            ISpellContainer spellContainer = ISpellContainer.get(container);
+            if (spellContainer.isEmpty()) continue;
+            
+            // 检查此容器是否包含当前法术
+            for (SpellData spellData : spellContainer.getAllSpells()) {
+                if (spellData.equals(currentSpell)) {
+                    return getCastSource(container);
+                }
+            }
+        }
+        
+        // 如果找不到，返回默认值
         return CastSource.SPELLBOOK;
     }
     
@@ -421,7 +358,7 @@ public class IronsSpellbooksProvider implements ISpellBookProvider {
         // 根据法术类型调用相应的onCast
         if (spell.getCastType() == CastType.LONG || spell.getCastType() == CastType.INSTANT) {
             // LONG和INSTANT类型在施法完成时调用onCast
-            CastSource castSource = getCastSource(data.getSpellBook());
+            CastSource castSource = getCastSource(data, data.getCurrentCastingSpell());
             spell.onCast(maid.level(), data.getCurrentCastingSpell().getLevel(), maid, castSource, magicData);
         }
         // CONTINUOUS类型的法术在施法过程中已经多次调用onCast，这里不需要再调用
@@ -437,7 +374,7 @@ public class IronsSpellbooksProvider implements ISpellBookProvider {
     /**
      * 为不同类型的法术设置目标数据
      */
-    private void setupSpellTargetData(EntityMaid maid, AbstractSpell spell, int spellLevel) {
+    private void setupSpellTargetData(EntityMaid maid, AbstractSpell spell) {
         MaidIronsSpellData data = getData(maid);
         if (data == null) return;
         
@@ -449,7 +386,7 @@ public class IronsSpellbooksProvider implements ISpellBookProvider {
         
         // 传送类法术需要特殊的TeleportData
         if (spellId.equals("irons_spellbooks:teleport") || spellId.contains("step")) {
-            setTeleportLocationBehindTarget(maid, target, magicData, spell, spellLevel);
+            setTeleportLocationBehindTarget(maid, target, magicData);
         }
         // 为需要目标区域的法术设置目标区域数据
         else if (spellId.equals("irons_spellbooks:starfall") || 
@@ -481,7 +418,7 @@ public class IronsSpellbooksProvider implements ISpellBookProvider {
      * 为传送法术设置目标位置在敌人后方
      * 参考AbstractSpellCastingMob.setTeleportLocationBehindTarget方法
      */
-    private void setTeleportLocationBehindTarget(EntityMaid maid, LivingEntity target, MagicData magicData, AbstractSpell spell, int spellLevel) {
+    private void setTeleportLocationBehindTarget(EntityMaid maid, LivingEntity target, MagicData magicData) {
         if (target == null || maid == null) {
             return;
         }
